@@ -176,7 +176,10 @@ Shorewall 4.4.3
 1.  Previously, if 'routeback' was specified in /etc/shorewall/routestopped:
 
     a) 'shorewall check' produced an internal error
-    b) The 'routeback' option didn't work.
+    b) The 'routeback' option didn't work
+
+2)  If an alias IP address was added and RETAIN_ALIASES=No in
+    shorewall.conf, then a compiler internal error resulted.
 
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
