@@ -6,6 +6,8 @@ Changes in Shorewall 4.4.3
 
 3)  Rename 'object' to 'script' in compiler and config modules.
 
+4)  Correct RETAIN_ALIASES=No.
+
 Changes in Shorewall 4.4.2
 
 1)  BUGFIX: Correct detection of Persistent SNAT support
